--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 
 bootstrapNodeAddress: "192.168.1.2:8080"
-localNodePort: 8081
-
+localNodePort: 5050
+  
+url: http://127.0.0.1:8080
+timeout: PT10S
+maxRetryCount: 3
